[package]
name = "dalmocoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dalmocoinlib"
path = "src/lib.rs"

[[bin]]
name = "dalmocoin"
path = "src/main.rs"


[dependencies]
hex = "0.3.2"
crypto-hash = "0.3.3"